# Real_World_Haskell_Exercise

./: README.md
chapter_1/: quux.txt  wc.hs  wcc.hs  wcw.hs
chapter_10/: EitherInt.hs  FunctorLaw.hs  PNM.hs  Parse.hs  TreeMap.hs  TypeConstraint.hs  ValidFunctor.hs
chapter_11/: Main.hs.html  Prettify.hs  QC-basics.hs  QC.hs  Run.hs  hpc_index_fun.html
chapter_12/: Barcode.hs
chapter_13/: DList.hs  Monoid.hs  buildmap.hs  funcrecs.hs  funcrecs2.hs  lazy.hs  num.hs  numsimple.hs  passwd-al.hs  passwdmap.hs
chapter_14/: Logger.hs  Maybe.hs  Parse.hs
chapter_2/: RoundToEven.hs  addfunciton.hs  assign.hs  lastButOne.hs  myDrop.hs
chapter_3/: AlgebraicVector.hs  AltCustomer.hs  BadTree.hs  BogusPattern.hs  BookStore.hs  Braces.hs  Guard.hs  Lending.hs  ListADT.hs  LocalFunction.hs  MaybeTree.hs  MySecond.hs  NestedLets.hs  Nullable.hs  Roygbiv.hs  ShapeUnion.hs  Tree.hs  ex01.hs  ex03.hs  ex04.hs  ex05.hs  ex06.hs  ex07.hs  ex09.hs  ex10-13.hs  letwhere.hs  myDrop.hs  myNot.hs  sumList.hs
chapter_4/: Adler32.hs  IntParse.hs  ch04.exercises.hs  ch04_1.exercises.hs  ch04_2.exercises.hs  compose.hs  dlts.hs  foldl.hs  foldlSum.hs  foldrSum.hs  isInAny.hs  myFilter.hs  myFoldl.hs  myFoldrMap.hs  myMap.hs  niceSumPartial.hs  oddList.hs  strictFoldl.hs  suffixes.hs
chapter_5/: Main.hs  Prettify.hs  PrettyJSON.hs  PutJSON.hs  Setup.hs  SimpleJSON.hs  mypretty.cabal
chapter_6/: AutomaticDerivation.hs  BasicEq.hs  BrokenClass.hs  JSONClass.hs  Monomorphism.hs  NewType.hs  NewtypeDiff.hs  ShowOverlapSolved.hs  SimpleClass.hs  SimpleJSON.hs  SimpleResult.hs  (+1 more)
(+27 files in other folders)
